  scripts.keytester`.
- New `:config-diff` command which opens the `qute://configdiff` page.
- New `--debug-flag log-cookies` to log cokies to the debug log for
  debugging.
- New `colors.contextmenu.disabled.{fg,bg}` settings to customize colors for
  disabled items in the context menu.
- New line selection mode (`:toggle-selection --line`), bound to `Shift-V` in caret mode.

Changed
~~~~~~~

- The `content.cookies.accept` setting now accepts URL patterns.
- Tests are now included in release tarballs. Note that only running them with
  the exact dependencies listed in
  `misc/requirements/requirements-tests.txt{,-raw}` is supported.
- The `:tab-focus` command now has completion for tabs in the current window.
- The `bindings.key_mappings` setting now maps `<Ctrl+I>` to the tab key by default.
- `:tab-give --private` now detaches a tab into a new private window.

Fixed
~~~~~

- Using `:open -s` now only rewrites `http://` in URLs to `https://`, not other
  schemes like `qute://`.
- When an unhandled exception happens in certain parts of the code (outside of
  the main thread), qutebrowser did crash or freeze when trying to show its
  exception handler. This is now fixed.
- `:inspector` now works correctly when cookies are disabled globally.
- Added workaround for a (Gentoo?) PyQt/packaging issue related to the
  `QWebEngineFindTextResult` handling added in v1.11.0.
- When entering caret selection mode (`v, v`) very early before a page is
  loaded, an error is now shown instead of a crash happening.
- The workaround for session loading with Qt 5.15 now handles
  `sessions.lazy_restore` so that the saved page is loaded instead of the
  "stub" page with no possibility to get to the web page.

v1.11.1 (2020-05-07)
--------------------

Security
~~~~~~~~

- CVE-2020-11054: After a certificate error was overridden by the user,
  qutebrowser displays the URL as yellow (`colors.statusbar.url.warn.fg`).